Make UI updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lorem Picsum Photos</string>
     <string name="app_bar_title">Lorem Picsum Photos</string>
     <string name="select_author">Select author…</string>
+    <string name="no_images_available">No images available</string>
 </resources>
